Boton de compra con icono y css

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
     </main>
 
     <footer>
-        <p>&copy; 2023 Tiendita de Libros de Gonza</p>
+        <p>&copy; 2023 Tiendita de Libros de Gonza más compañia</p>
     </footer>
     <script src="script.js"></script>
 </body>
