Comienzo de funcion generos

--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
                                 Generos
                             </a>
                             <!-- Actualizar por generos de busqueda -->
-                            <ul class="dropdown-menu">
-                                <li><a class="dropdown-item" href="#">Action</a></li>
-                                <li><a class="dropdown-item" href="#">Another action</a></li>
+                            <ul class="dropdown-menu" id="dropdown-menu">
+                                <li><a class="dropdown-item" href="#">genero1</a></li>
+                                <li><a class="dropdown-item" href="#">genero2</a></li>
                                 <li>
                                     <hr class="dropdown-divider">
                                 </li>
