--- a/index.html
+++ b/index.html
@@ -67,7 +67,8 @@
     </header>
     <main>
         <div class="container">
-            <div id="resultadosDeBusqueda">
+            <h1 id="BusquedaImput"></h1>
+            <div id="resultadosDeBusqueda" class="libros">
                 
             </div>
             <h2>Recomendaciones</h2>
