--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
                             <a class="nav-link disabled" aria-disabled="true">Ingreso</a>
                         </li>
                     </ul>
+                    <button class="sesion" id="sesion">Iniciar Sesion</button>
                     <form class="d-flex" role="search">
                         <input class="form-control me-2" type="search" placeholder="Busqueda..." aria-label="Search">
                         <button class="btn btn-outline-success" type="submit">Busqueda</button>
@@ -73,6 +74,7 @@
         <p>&copy; 2023 Tiendita de Libros de Gonza más compañia</p>
     </footer>
     <script src="script.js"></script>
+    <script src="login.js"></script>
 </body>
 
 </html>
