--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                             <a class="nav-link disabled" aria-disabled="true">Ingreso</a>
                         </li>
                     </ul>
-                    <button class="sesion" id="sesion">Iniciar Sesion</button>
+                    <button class="sesion btn btn-outline-success" id="sesion">Iniciar Sesion</button>
                     <form class="d-flex" role="search">
                         <input class="form-control me-2" type="search" placeholder="Busqueda..." id="busqueda" aria-label="Search">
                         <button class="btn btn-outline-success" type="submit" onclick="busquedaAvanzada(event)">Busqueda</button>
