--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                                 </li>
                                 <li><a class="dropdown-item" href="#">Something else here</a></li>
 
-                                -->                                
+                                -->
                             </ul>
                         </li>
                         <li class="nav-item">
@@ -59,8 +59,10 @@
                     </ul>
                     <button class="sesion btn btn-outline-success" id="sesion">Iniciar Sesion</button>
                     <form class="d-flex" role="search">
-                        <input class="form-control me-2" type="search" placeholder="Busqueda..." id="busqueda" aria-label="Search">
-                        <button class="btn btn-outline-success" type="submit" onclick="busquedaAvanzada(event)">Busqueda</button>
+                        <input class="form-control me-2" type="search" placeholder="Busqueda..." id="busqueda"
+                            aria-label="Search">
+                        <button class="btn btn-outline-success" type="submit"
+                            onclick="busquedaAvanzada(event)">Busqueda</button>
                     </form>
                 </div>
             </div>
@@ -70,12 +72,33 @@
         <div class="container">
             <h1 id="BusquedaImput"></h1>
             <div id="resultadosDeBusqueda" class="libros">
-                
+
             </div>
             <h2>Recomendaciones</h2>
             <div class="libros" id="libros"></div>
         </div>
     </main>
+
+
+
+    <!-- Modal -->
+    <div id="myModal" class="modal">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="modalTitle">Modal title</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body" id="modalBody">
+                    <p>Modal body text goes here.</p>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
+                    <button type="button" class="btn btn-primary">Agregar al Carrito</button>
+                </div>
+            </div>
+        </div>
+    </div>
 
     <footer>
         <p>&copy; 2023 Tiendita de Libros de Gonza más compañia</p>
