--- a/index.html
+++ b/index.html
@@ -57,13 +57,18 @@
                             <a class="nav-link disabled" aria-disabled="true">Ingreso</a>
                         </li>
                     </ul>
-                    <button class="sesion btn btn-outline-success" id="sesion">Iniciar Sesion</button>
+                    <!-- Ingreso de usuario -->
+
+
                     <form class="d-flex" role="search">
                         <input class="form-control me-2" type="search" placeholder="Busqueda..." id="busqueda"
                             aria-label="Search">
                         <button class="btn btn-outline-success" type="submit"
                             onclick="busquedaAvanzada(event)">Busqueda</button>
                     </form>
+                    <div class="ingreso" id="ingreso">
+                        <button class="sesion btn btn-outline-success" id="sesion">Iniciar Sesion</button>
+                    </div>
                 </div>
             </div>
         </nav>
