--- a/index.html
+++ b/index.html
@@ -53,9 +53,7 @@
                                 -->
                             </ul>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link disabled" aria-disabled="true">Ingreso</a>
-                        </li>
+                       
                     </ul>
                     <!-- Ingreso de usuario -->
 
@@ -68,6 +66,9 @@
                     </form>
                     <div class="ingreso" id="ingreso">
                         <button class="sesion btn btn-outline-success" id="sesion">Iniciar Sesion</button>
+                    </div>
+                    <div class="carrito">
+                        <img src="./img/carrito.png" alt="carrito de compras" class="carrito">
                     </div>
                 </div>
             </div>
@@ -105,11 +106,17 @@
         </div>
     </div>
 
+    <!--Modal carrito de compras-->
+    <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable" id="modalCarrito">
+        
+    </div>
+
     <footer>
         <p>&copy; 2023 Tiendita de Libros de Gonza más compañia</p>
     </footer>
     <script src="script.js"></script>
     <script src="login.js"></script>
+    <script src="carrito.js"></script>
 </body>
 
 </html>
