cambio de color y margin de btn busqueda e iniciar sesion

--- a/index.html
+++ b/index.html
@@ -63,11 +63,11 @@
                     <form class="d-flex" role="search">
                         <input class="form-control me-2" type="search" placeholder="Busqueda..." id="busqueda"
                             aria-label="Search">
-                        <button class="btn btn-outline-success" type="submit"
+                        <button class="btn btn-outline-dark" type="submit"
                             onclick="busquedaAvanzada(event)">Busqueda</button>
                     </form>
                     <div class="ingreso" id="ingreso">
-                        <button class="sesion btn btn-outline-success" id="sesion">Iniciar Sesion</button>
+                        <button class="sesion btn btn-outline-dark" id="sesion">Iniciar Sesion</button>
                     </div>
                 </div>
             </div>
