--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 
 
     <footer>
-        <p>&copy; 2023 Tiendita de Libros de Gonza más compañia</p>
+        <p>&copy; 2023 Tiendita de Libros de la compañia</p>
     </footer>
     <script src="script.js"></script>
     <script src="login.js"></script>
